[package]
name = "RideNetwork"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ride_network"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.27.0", features =["init-if-needed"]}
anchor-spl = "0.27.0"
winnow = "=0.4.1"
uuid = "0.8"

